docs: add Deployment and Observability sections to system design architecture
Document deployment architecture and operational characteristics to support
system understanding and debugging during development and testing.

Deployment section covers single-instance design, infrastructure requirements,
configuration management, packaging process, and operational behaviour.

Observability section documents current state (minimal logging, health endpoint,
post-mortem tools) and operational visibility tradeoffs aligned with demonstration
system goals.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>